tests/type/errors/bad_unreachable1.xi
foo():int {
    x:bool = false
	if (x) {
      return 1
    } else {
      return 2
    }
    return 3
}
